Atualização de BaseDados

--- a/Aplicação Web.html
+++ b/Aplicação Web.html
@@ -16,7 +16,7 @@
             </h1>
         </div>
         <div style="height: 40px;width:650px; float:right; margin: 20px 0px">
-            <div style="width: 300px; float:left; margin-right: 15px">
+            <div style="width: 300px; float:left; margin-right: 10px">
                     Máquina:
                     <select name="máquina" id="máquina">
                         <option value="1"> Retificadora </option>
@@ -24,8 +24,22 @@
                         <option value="3"> Torno </option>
                         <option value="4"> Fresadora </option>
                         <option value="5"> CNC </option>
-                        <option value="6"></option>
-                        <option value="" selected>Selecione a Máquina</option>
+                        <option value="6"> Motor </option>
+                        <option value="7"></option>
+                        <option value="" selected>Selecione o tipo de Máquina</option>
+                    </select>
+            </div>
+            <div style="width: 300px; float:center">
+                    ID Máquina:
+                    <select name="ID_Máquina" id="ID_Máquina">
+                        <option value="1"> 10001 </option>
+                        <option value="2"> 20001 </option>
+                        <option value="3"> 30001 </option>
+                        <option value="4"> 40001 </option>
+                        <option value="5"> 50001 </option>
+                        <option value="6"> 60001 </option>
+                        <option value="7"></option>
+                        <option value="" selected>Selecione o ID da Máquina</option>
                     </select>
             </div>
             <div style="width: 300px; float:left">
