--- a/WebApp_PSA/WebApp_PSA.html
+++ b/WebApp_PSA/WebApp_PSA.html
@@ -48,7 +48,7 @@
         <div>
             <h3 style="text-align: center; width:300px; margin-top:-400px; margin-left: 575px; display: block"> Dados dos sensores </h3>
         </div>
-        <div style="margin-left:-850px" id="curve_chart"></div>
+        <div style="margin-left:-850px;" id="curve_chart"></div>
         <div class="options" style="width: 230px; margin: 0px 150px 0px 0px">
             <div style="width: 210px; height: 70px; margin: 10px 10px 0px 10px">
                 <label style="font-weight: bolder;" for="maquinas">Escolha uma máquina:</label>
@@ -157,7 +157,7 @@
             var options = {
                 curveType: 'function',
                 titleTextStyle: { fontSize: '25' },
-                legend: { position: 'right' }
+                legend: { position: 'top', maxLines: 4 }
             };
 
             var chart = new google.visualization.LineChart(document.getElementById('curve_chart'));
