--- a/WebApp_PSA/WebApp_PSA.html
+++ b/WebApp_PSA/WebApp_PSA.html
@@ -49,7 +49,7 @@
             <h3 style="text-align: center; width:300px; margin-top:-400px; margin-left: 575px; display: block"> Dados dos sensores </h3>
         </div>
         <div style="margin-left:-850px;" id="curve_chart"></div>
-        <div class="options" style="width: 230px; margin: 0px 150px 0px 0px">
+        <div class="options" style="border: 1px solid black; width: 300px; margin: 0px 150px 0px 0px">
             <div style="width: 210px; height: 70px; margin: 10px 10px 0px 10px">
                 <label style="font-weight: bolder;" for="maquinas">Escolha uma máquina:</label>
                 <select name="maquinas" id="maquinas">
