--- a/WebApp_PSA/WebApp_PSA.html
+++ b/WebApp_PSA/WebApp_PSA.html
@@ -59,7 +59,7 @@
                     </div>
             </div>
             <h1 class="header" style="padding-top:10px">Diagnóstico</h1>
-            <h1><img class="header" style="height: 50px; margin-left:550px; margin-right:150px" src="logo.svg" alt=""></h1>
+            <h1><img class="header" style="height: 50px; margin-left:550px; margin-right:150px" src="logo_UA.svg" alt=""></h1>
         </div>
     </nav>
     <div class="topper" id="dados">
